--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,155 @@
     transform: rotate(360deg);
   }
 }
+button {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.8), 0 4px 4px 0 rgba(0, 0, 0, 0.8);
+}
+.prod-menu {
+  position:absolute;
+  width:100%;
+  top:42px;
+}
+.prod-menu button {
+  position: absolute;
+  left: 5px;
+  top:6px;
+  width: 60px;
+  height: 30px;font-size: 16px;
+  background-color: green;
+  color: white;
+  cursor:pointer;
+}
+.product-wrapper {
+  top:100px;
+  width:500px;
+  position:absolute;
+  height:650px;
+}
+.pagination {
+  position: relative;
+}
+.pagination .prev-page {
+    position: absolute;
+    left: 16px;
+    cursor: pointer;
+}
+.pagination .next-page {
+      position: absolute;
+    right: 55px;
+    cursor: pointer;
+}
+.pagination .pagination-headline {
+    position: absolute;
+    left: 215px;
+}
+.prod-bar .product-image {
+  width: 108px;
+  top: 11px;
+  position: absolute;
+}
+.prod-bar {
+  height:120px;
+  width:90%;
+  border-style:solid;
+  border-width:2px;
+  border-color:'black';
+  position: relative;
+  margin-bottom: 5px;
+}
+.prod-bar .prod-bar-name {
+    position: absolute;
+    min-height: 30px;
+    color: black;
+    left: 130px;
+    top: 5px;
+    width: 310px;
+    text-wrap: wrap;
+    height: 18px;
+    overflow: hidden;
+}
+.prod-menu input{
+  position: absolute;
+  left: 80px;
+  height: 28px;
+  top: 6px;
+  border-radius: 8px;
+}
+.prod-menu .sort-by {
+  position: absolute;
+  left: 266px;
+  top: 11px;
+}
+.prod-menu select {
+  position: absolute;
+  top: 10px;
+  left: 324px;
+}
+.prod-bar .prod-bar-desc {
+    position: absolute;
+    min-height: 20px;
+    color: black;
+    left: 130px;
+    top: 30px;
+    width: 310px;
+    text-wrap: wrap;
+    height: 22px;
+    overflow: hidden;
+}
+.prod-bar .prod-bar-delete {
+  width:100px;
+  height:30px;
+  background-color: orange;
+  font-size: 16px;
+  position: absolute;
+  bottom: 7px;
+  right:3px;
+  cursor: pointer;
+  /* padding: 3px; */
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 5px;
+  padding-top: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.8), 0 4px 4px 0 rgba(0, 0, 0, 0.8);
+}
+.details-wrapper{
+    position: absolute;
+    top: 100px;
+    left: 500px;
+    width: 500px;
+    height: 630px;
+}
+.details-wrapper .saved-message {
+    color: blue;
+    text-align: center;
+    margin-top: 5px;    color: blue;
+    text-align: center;
+    margin-top: 5px;
+}
+.details-wrapper .dets-wrapper {
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+  height: 630px;
+  padding: 20px;
+}
+.dets-wrapper .details-headline {
+  position: absolute;
+  top: -10px;
+  background-color: white}
+.details-wrapper .product-image {
+  width: 130px;
+  margin-left: 30px;
+}
+.details-wrapper textarea {
+  width: 95%;
+}
+.details-wrapper button {
+      position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: lightgreen;
+    border-radius: 6px;
+    height: 20px;
+    cursor: pointer;
+}
